# cw20-balance-contract

./: .gitignore  Cargo.toml  README.md
.cargo/: config
examples/: schema.rs
schema/: query_msg.json
src/: contract.rs  lib.rs  msg.rs
